--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.main-content {
+  margin-left: 120px;
+  padding-top: 20px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +45,6 @@
 .read-the-docs {
   color: #888;
 }
+
+
+
